/**
 * Integration tests for protobuf contracts
 * Tests protobuf message serialization/deserialization
 */

import { describe, it, expect } from 'vitest';
import * as path from 'path';
import * as fs from 'fs';

// Note: This is a TypeScript test file
// For actual protobuf testing, you would need:
// 1. Generated protobuf code (from protoc)
// 2. Protobuf runtime library
// This test file demonstrates the structure and expected behavior

describe('Protobuf Contracts', () => {
  describe('flow.proto', () => {
    it('should have valid flow.proto file', () => {
      const protoPath = path.join(__dirname, '../../../proto/beamline/flow/v1/flow.proto');
      expect(fs.existsSync(protoPath)).toBe(true);
      
      const content = fs.readFileSync(protoPath, 'utf-8');
      expect(content).toContain('package beamline.flow.v1');
      expect(content).toContain('message Message');
      expect(content).toContain('message RouteRequest');
      expect(content).toContain('message RouteDecision');
      expect(content).toContain('service Router');
    });
    
    it('should validate Message structure', () => {
      const fixturePath = path.join(__dirname, '../../fixtures/protobuf/message.json');
      const message = JSON.parse(fs.readFileSync(fixturePath, 'utf-8'));
      
      expect(message).toHaveProperty('message_id');
      expect(message).toHaveProperty('tenant_id');
      expect(message).toHaveProperty('trace_id');
      expect(message).toHaveProperty('message_type');
      expect(message).toHaveProperty('payload');
      expect(message).toHaveProperty('metadata');
      expect(message).toHaveProperty('timestamp_ms');
    });
    
    it('should validate RouteRequest structure', () => {
      const fixturePath = path.join(__dirname, '../../fixtures/protobuf/route_request.json');
      const request = JSON.parse(fs.readFileSync(fixturePath, 'utf-8'));
      
      expect(request).toHaveProperty('message');
      expect(request).toHaveProperty('policy_id');
      expect(request).toHaveProperty('context');
      expect(request.message).toHaveProperty('message_id');
    });
  });
  
  describe('provider.proto', () => {
    it('should have valid provider.proto file', () => {
      const protoPath = path.join(__dirname, '../../../proto/beamline/provider/v1/provider.proto');
      expect(fs.existsSync(protoPath)).toBe(true);
      
      const content = fs.readFileSync(protoPath, 'utf-8');
      expect(content).toContain('package beamline.provider.v1');
      expect(content).toContain('message ProviderRequest');
      expect(content).toContain('message ProviderResponse');
      expect(content).toContain('message StreamChunk');
      expect(content).toContain('service Provider');
    });
    
    it('should validate ProviderRequest structure', () => {
      const fixturePath = path.join(__dirname, '../../fixtures/protobuf/provider_request.json');
      const request = JSON.parse(fs.readFileSync(fixturePath, 'utf-8'));
      
      expect(request).toHaveProperty('provider_id');
      expect(request).toHaveProperty('message_id');
      expect(request).toHaveProperty('tenant_id');
      expect(request).toHaveProperty('trace_id');
      expect(request).toHaveProperty('body');
      expect(request).toHaveProperty('parameters');
      expect(request).toHaveProperty('metadata');
      expect(request).toHaveProperty('timestamp_ms');
    });
  });
  
  describe('Protobuf Message Validation', () => {
    it('should validate message_id format', () => {
      const fixturePath = path.join(__dirname, '../../fixtures/protobuf/message.json');
      const message = JSON.parse(fs.readFileSync(fixturePath, 'utf-8'));
      
      expect(message.message_id).toBeTruthy();
      expect(typeof message.message_id).toBe('string');
    });
    
    it('should validate tenant_id format', () => {
      const fixturePath = path.join(__dirname, '../../fixtures/protobuf/message.json');
      const message = JSON.parse(fs.readFileSync(fixturePath, 'utf-8'));
      
      expect(message.tenant_id).toBeTruthy();
      expect(typeof message.tenant_id).toBe('string');
    });
    
    it('should validate trace_id format', () => {
      const fixturePath = path.join(__dirname, '../../fixtures/protobuf/message.json');
      const message = JSON.parse(fs.readFileSync(fixturePath, 'utf-8'));
      
      expect(message.trace_id).toBeTruthy();
      expect(typeof message.trace_id).toBe('string');
    });
    
    it('should validate payload is base64', () => {
      const fixturePath = path.join(__dirname, '../../fixtures/protobuf/message.json');
      const message = JSON.parse(fs.readFileSync(fixturePath, 'utf-8'));
      
      // In JSON fixture, payload is base64 string
      // In protobuf, it would be bytes
      expect(message.payload).toBeTruthy();
      expect(typeof message.payload).toBe('string');
    });
    
    it('should validate timestamp_ms is number', () => {
      const fixturePath = path.join(__dirname, '../../fixtures/protobuf/message.json');
      const message = JSON.parse(fs.readFileSync(fixturePath, 'utf-8'));
      
      expect(message.timestamp_ms).toBeTruthy();
      expect(typeof message.timestamp_ms).toBe('number');
    });
  });
});

